# A.R.I.A

./: .gitignore  ModelFile  README.md  app.py  pyproject.toml  pyvenv.cfg  wake_aria.py
assets/: hey-Aria_en_linux_v3_0_0.ppn
modules/: llm_engine.py  music.py  tts_engine.py  weather.py
